--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,6 @@
     <groupId>org.casual</groupId>
     <artifactId>mobile-business-plan</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <packaging>jar</packaging>
 
     <properties>
         <spring.version>5.0.8.RELEASE</spring.version>
@@ -51,4 +50,17 @@
             <optional>true</optional>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
