--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,4 +1,4 @@
-mobile-bp.jdbc.driver=com.mysql.jdbc.Driver
+mobile-bp.jdbc.driver=com.mysql.cj.jdbc.Driver
 mobile-bp.jdbc.url=jdbc:mysql://47.106.76.207:3306/MobileBP?createDatabaseIfNotExist=true&useUnicode=true&characterEncoding=utf-8&serverTimezone=GMT%2b8&useSSL=false
 mobile-bp.jdbc.username=root
 mobile-bp.jdbc.password=root
